Finished the FreeCodeCamp Landing Page Project. Added some code for mobile.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
     </section>
-    <section id="video">
+    <section id="video-section">
         <iframe id="video"></iframe>
     </section>
     <section id="pricing">
